[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/GameMenu/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=2]

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BackImageMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColorRect" type="ColorRect" parent="BackImageMarginContainer"]
margin_right = 530.0
margin_bottom = 320.0
color = Color( 0.533333, 0.815686, 1, 1 )

[node name="MainMenuMarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
custom_constants/margin_left = 25
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuMarginContainer"]
margin_left = 25.0
margin_top = 248.0
margin_right = 79.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_constants/separation = 5

[node name="PlayButton" type="Button" parent="MainMenuMarginContainer/VBoxContainer"]
margin_right = 54.0
margin_bottom = 14.0
text = "Играть"
align = 0

[node name="OptionsButton" type="Button" parent="MainMenuMarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 54.0
margin_bottom = 33.0
text = "Настройки"
align = 0

[node name="ExitButton" type="Button" parent="MainMenuMarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 54.0
margin_bottom = 52.0
text = "Выход"
align = 0
